gccida/c2/variable_section
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/variable_section/src/varasm.c:1113:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 != in_const ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/variable_section/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/variable_section/src/varasm.c:1117:1: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
in_section_0 = in_const; 
^~~~~~~~~~~~
in_section
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/variable_section/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/variable_section/src/varasm.c:1137:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 != in_data ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/variable_section/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/variable_section/src/varasm.c:1144:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 != in_const ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/variable_section/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/variable_section/src/varasm.c:1147:11: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
else if ( in_section_0 != in_data ) 
          ^~~~~~~~~~~~
          in_section
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/variable_section/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/variable_section/src/varasm.c:1151:1: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
in_section_0 = in_data; 
^~~~~~~~~~~~
in_section
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/variable_section/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/variable_section/src/obj/varasm.o] Error 1
